# hubmail

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  package.json  src.md
config-dashboard/: app.py  (+4 more)
dsl/: .gitignore  Dockerfile.dashboard  Makefile  README.md  TODO.txt  advanced_logging.py  diagram.html  docker-compose-email.yml  email_pipeline.py  email_processor.py  flow_dsl.py  flow_scheduler.py  flow_visualizer.py  mini_dashboard.py  notification_service.py  parallel_executor.py  pyproject.toml  requirements.txt  simple_dashboard.py  start_email_test_env.sh  test_email_notification.py  tox.ini  visualize_flow.py
dsl/.github/workflows/: ci.yml
dsl/config/: notification_config.json
dsl/docs/: dokumentacja.md  environment_configuration.md  faq.md  przyklady.md  samouczek.md  troubleshooting.md
dsl/docs/pl/: dokumentacja.md  faq.md  przyklady.md  samouczek.md  troubleshooting.md
dsl/dsl_definitions/: email_processing.dsl
dsl/examples/: .env.template  .gitignore  Makefile  README.md  api_data.db  api_flow.py  basic_flow.py  data_flow.py  email_flow.py
dsl/examples/api_integration/: .env.example  README.md  USAGE.md  docker-compose.yml  requirements.txt  weather_api.py
dsl/examples/data_processing/: .env.example  Dockerfile.generator  README.md  csv_processing.py  data_generator.py  docker-compose.yml  requirements.generator.txt  requirements.txt
dsl/examples/email_processing/: .env.example  Makefile  README.md  TODO.txt  docker-compose.yml  docker-down.sh  docker-up.sh  email_processor.py  flow.dsl  flow.py  requirements.txt  test_email_notification.py
dsl/examples/parallel_tasks/: .env.example  README.md  USAGE.md  basic_parallel.py  dependency_graph.py  requirements.txt
dsl/examples/performance_benchmarks/: .env.example  README.md  USAGE.md  requirements.txt  run_benchmarks.py
dsl/scripts/: add-dsl-visualizer.sh  add-markdown-enhancements.sh
dsl/taskinity/: __init__.py  api.py  api_client.py  cli.py  dashboard.py  data_processors.py  data_transformers.py  examples.py  execution_visualizer.py  flow_dsl.py  flow_scheduler.py  flow_visualizer.py  notification.py  notification_service.py  parallel_executor.py  scheduler.py  utils.py
dsl/templates/: index.html  mini.html
dsl/tests/: conftest.py  test_env_loader.py  test_flow_dsl.py  test_taskinity_core.py
(+132 files in other folders)
